--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ Pygments==2.19.2
 python-dotenv==1.1.1
 python-multipart==0.0.20
 PyYAML==6.0.2
+redis==6.2.0
 rich==14.1.0
 rich-toolkit==0.14.9
 rignore==0.6.4
